--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 <div class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
 		<div class="row">
-			<div class="col-sm-12 text-center">
-				<h2>L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.</h2>
+			<div class="col-sm-12 text-center centre">
+				<h2 class="titre">L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -91,7 +91,7 @@
 				<h3 class="mg-md text-center">
 					Web design
 				</h3>
-				<p class="text-center ">
+				<p class="text-center parasize ">
 					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
 			</div>
@@ -102,7 +102,7 @@
 				<h3 class="mg-md text-center">
 					&nbsp;Stratégie
 				</h3>
-				<p class="text-center ">
+				<p class="text-center parasize">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
 				</p>
 			</div>
@@ -113,15 +113,15 @@
 				<h3 class="mg-md text-center">
 					Illustrations
 				</h3>
-				<p class="text-center ">
+				<p class="text-center parasize ">
 					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 				</p>
 			</div>
 		</div>
-		<div class="row voffset-lg voffset">
-			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<p>"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
-				<p>Maxime Guibard, PDG de À vos fourchettes</p>
+		<div class="row voffset-lg voffset centre">
+			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center largest">
+				<p class="sitation">"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
+				<p class="otor">Maxime Guibard, PDG de À vos fourchettes</p>
 			</div>
 		</div>
 	</div>
