--- a/page2.html
+++ b/page2.html
@@ -163,6 +163,12 @@
 
 </div>
 <!-- Principal conteneur END -->
+
+	<script src="./js/jquery-2.1.0.js"></script>
+	<script src="./js/bootstrap.js"></script>
+	<script src="./js/blocs.js"></script>
+	<script src="./js/jqBootstrapValidation.js"></script>
+	<script src="./js/formHandler.js"></script>
     
 
 </body>
